cmake_minimum_required(VERSION 3.10)
project(wkhtml2img_dll LANGUAGES CXX)
add_library(wkhtml2img SHARED html_to_image.cpp)
target_include_directories(wkhtml2img PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
find_package(Ultralight REQUIRED)
target_include_directories(wkhtml2img PRIVATE ${Ultralight_INCLUDE_DIRS})
target_link_libraries(wkhtml2img PRIVATE ${Ultralight_LIBRARIES})
set_target_properties(wkhtml2img PROPERTIES OUTPUT_NAME "wkhtml2img")
target_compile_definitions(wkhtml2img PRIVATE UNICODE _UNICODE)
target_compile_options(wkhtml2img PRIVATE /O1 /Gy /Gw /Zc:inline)
if(MSVC)
    set_target_properties(wkhtml2img PROPERTIES LINK_FLAGS "/OPT:REF /OPT:ICF /SUBSYSTEM:WINDOWS /DEF:exports.def /LTCG")
endif()

